# seer_sessions

./: .buildinfo  CHANGELOG.rst  README.rst  about.html  changelog.html  connect.html  genindex.html  glossary.html  index.html  intro.html  logs.html  objects.inv  py-modindex.html  pyproject.toml  rename_task_folders.sh  search.html  searchindex.js  todos.html
.doctrees/: about.doctree  changelog.doctree  connect.doctree  glossary.doctree  index.doctree  intro.doctree  logs.doctree  todos.doctree
_modules/: index.html  seer_sessions.html
_sources/: intro.rst.txt
about/: index.html
changelog/: index.html
connect/: index.html
demos/: demo.html  index.html
docsrc/: conf.py  index.rst
genindex/: index.html
glossary/: index.html
intro/: index.html
log/: atom.xml  index.html
logs/: index.html
mission/: index.html
modules/: index.html
py-modindex/: index.html
refs/: index.html
run/: .concept_arc.py.swo  .run.py.swo  arc_1d.py  arcv2_eval.py  arcv2_training.py  arcv2_training_200.py  arcv2_training_200_300.py  arcv2_training_300_400.py  arcv2_training_900.py  concept_arc.py  config-25.yaml  config-kaggle.yaml  config.md  config.yaml  error_001.json  kaggle.py  mini-arc.py  navigator.py  run.py  run2.py  run3.py  run_ordered_training.py  run_unsolved-2.py  run_unsolved-3.py  run_unsolved-4.py  run_unsolved.py  task_overview.md  test.py  thinker.yaml
scripts/: analyze_sessions.py  duplicate_tasks.csv  file_list.py  find_duplicate_tasks-orig.py  find_duplicate_tasks.py  rename_summary_file.py  rename_task_folders.sh  replace_status_with_match.py  (+1 more)
(+270204 files in other folders)
