[project]
name = "geometor-seer_sessions"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "generated test results from SEER"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
seer_sessions = "geometor.seer_sessions.__main__:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["geometor"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "geometor.seer_sessions.__version__"}

[project.urls]
"Website" = "https://geometor.github.io/seer_sessions"
"Repository" = "https://github.com/geometor/seer_sessions"
"Issues" = "https://github.com/geometor/seer_sessions/issues"